...
  Widget _buildRawContentTypeDropdown(
    BuildContext context,
    WidgetRef ref,
    HttpRequest request,
  ) {
    final theme = Theme.of(context);
    final contentTypes = ['Text', 'JavaScript', 'JSON', 'HTML', 'XML'];

    return Container(
      margin: const EdgeInsets.only(left: 12),
      decoration: BoxDecoration(
        color: context.appTheme.surfaceVariant,
        borderRadius: AppMetrics.br4,
...
